--- a/app/src/main/res/layout/activity_overview.xml
+++ b/app/src/main/res/layout/activity_overview.xml
@@ -24,14 +24,23 @@
             android:background="@color/color_tundora"
             />
 
+        <View
+            android:layout_width="0dp"
+            android:layout_height="@dimen/dp_1"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar"
+            android:background="@color/color_gray"
+            />
+
         <ScrollView
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginTop="?attr/actionBarSize"
+            android:layout_margin="@dimen/dp_1"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
@@ -48,12 +57,22 @@
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
+                <View
+                    android:id="@+id/view_first"
+                    android:layout_width="0dp"
+                    android:layout_height="@dimen/dp_1"
+                    android:layout_margin="@dimen/dp_20"
+                    android:background="@color/color_gray"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/text_description" />
+
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/recycler_genres"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_margin="@dimen/dp_20"
-                    app:layout_constraintTop_toBottomOf="@+id/text_description"
+                    app:layout_constraintTop_toBottomOf="@+id/view_first"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layoutManager="android.support.v7.widget.LinearLayoutManager"
@@ -62,7 +81,7 @@
                     />
 
                 <View
-                    android:id="@+id/view"
+                    android:id="@+id/view_second"
                     android:layout_width="0dp"
                     android:layout_height="@dimen/dp_1"
                     android:layout_margin="@dimen/dp_20"
@@ -70,6 +89,48 @@
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/recycler_genres" />
+
+                <TextView
+                    android:id="@+id/text_title_production"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/dp_20"
+                    android:layout_marginTop="@dimen/dp_20"
+                    android:text="@string/title_production_companies"
+                    android:textColor="@android:color/white"
+                    android:textStyle="bold"
+                    app:layout_constraintTop_toBottomOf="@+id/view_second"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    />
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recycler_companies"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/dp_20"
+                    app:layout_constraintTop_toBottomOf="@+id/text_title_production"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+                    android:orientation="vertical"
+                    app:setAdapter="@{viewModel.observableCompanyAdapter}"
+                    android:nestedScrollingEnabled="false"
+                    app:addLinearDecoration="@{viewModel.getItemDecoration()}"
+                    />
+
+                <View
+                    android:id="@+id/view_third"
+                    android:layout_width="0dp"
+                    android:layout_height="@dimen/dp_1"
+                    android:layout_marginLeft="@dimen/dp_20"
+                    android:layout_marginRight="@dimen/dp_20"
+                    android:layout_marginTop="@dimen/dp_20"
+                    android:background="@color/color_gray"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/recycler_companies" />
+
 
                 <android.support.constraint.Guideline
                     android:id="@+id/guide_line"
@@ -87,7 +148,7 @@
                     android:text="@string/title_status"
                     android:textColor="@android:color/white"
                     app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/view" />
+                    app:layout_constraintTop_toBottomOf="@+id/view_third" />
 
                 <TextView
                     android:id="@+id/text_status"
@@ -108,7 +169,7 @@
                     android:text="@string/title_vote"
                     android:textColor="@android:color/white"
                     app:layout_constraintLeft_toRightOf="@+id/guide_line"
-                    app:layout_constraintTop_toBottomOf="@+id/view" />
+                    app:layout_constraintTop_toBottomOf="@+id/view_third" />
 
                 <TextView
                     android:id="@+id/text_vote"
